# cg_course

./: .gitignore  README.md
docs/course/: report_title.doc  ТЗ_Лысцев.doc
docs/course/coursework/: 00-packages.tex  01-definitions.aux  02-abbreviations.aux  03-introduction.aux  03-introduction.tex  04-analysis.aux  04-analysis.tex  05-design.aux  05-design.tex  06-implementation.aux  06-implementation.tex  07-research.aux  07-research.tex  08-conclusion.aux  08-conclusion.tex  09-appendix.aux  biblio.bib  coursework.aux  coursework.bcf  coursework.blg  coursework.tex  coursework.toc
docs/course/coursework/inc/img/scheme_graphml/: UMLClassStructure.graphml  genHeightMapAlg.graphml  perlinNoiseAlg.graphml  perlinNoiseWithMultiOctavesAlg.graphml
docs/course/coursework/inc/lst/: calcIntensityForEachVertex.txt  removeInvisiblePart1.txt  removeInvisiblePart2.txt
docs/course/coursework/svg-inkscape/: perlinNoiseAlg_svg-tex.pdf_tex
docs/course/docs_course/: .~lock.треб к оформлению проекта.doc#  ИУ7-53-23.doc
docs/course/presentation/: pres.pptx
docs/summer_practice/: report.docx  report_title.docx  tz_practice.doc
docs/summer_practice/docs_practice/docs/: ТЗ_Лысцев.doc
landscape_generator/: CMakeLists.txt  getNumLinesCode.sh  mainwindow.ui
landscape_generator/data/: least_square_method.py  study1.gpi  study1.txt  study2.txt  test.py
landscape_generator/inc/: camera.h  diamond_square.h  landscape.h  landscapeManager.h  light.h  lightManager.h  mainwindow.h  perlinNoise.h  plane.h  point.h  renderer.h  transform.h  vector2d.h  vector3d.h  zbuffer.h
landscape_generator/inc/point/: point2D.h  point3D.h
landscape_generator/inc/vector/: vector2D.h  vector3D.h
landscape_generator/src/: camera.cpp  diamond_square.cpp  landscape.cpp  landscapeManager.cpp  light.cpp  lightManager.cpp  main.cpp  mainwindow.cpp  perlinNoise.cpp  plane.cpp  renderer.cpp  transform.cpp  zbuffer.cpp
